Bug 1821603 - Fix writing-mode mismatch in visibility: collapse handling. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D172438